add R-bloggers tag

--- a/content/post/2018-03-06-introducing-the-snakecase-package.Rmd
+++ b/content/post/2018-03-06-introducing-the-snakecase-package.Rmd
@@ -5,6 +5,7 @@ date: '2018-03-06'
 slug: introducing-the-snakecase-package
 categories:
   - R
+  - R-bloggers
 tags: []
 header:
   image: "headers/Rplot40_wide_right_top.png"
